turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: not found: value color
		if (getCouleurSol() == colors(c) && c < color.length - 2)
                                                        ^LangtonsAnt:12: error: not found: value color
		if (getCouleurSol() == colors(c) && c == color.length - 1)
                                                         ^